--- a/about-us.html
+++ b/about-us.html
@@ -101,7 +101,7 @@
                         <li><a class="active" href="about-us.html">About us</a></li>
 
                         <li><a href="testimonials.html">Testimonials</a></li>
-                        <li><a href="pricing.html">Pricing</a></li>
+                        <li><a href="pricing.php">Pricing</a></li>
 						<li><a href="contact.html">Contact</a></li>
                         <li><a href = "signup.html">Signup</a></li>
                         <li><a href="ad.php">Admin</a></li>
